<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/repo_linear_layout_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_material_light"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="PrivateResource">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:baselineAligned="false"
    android:orientation="horizontal" android:layout_width="fill_parent"
    android:padding="@dimen/default_material_screen_edge_margin"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="0.65"
        android:id="@+id/repo_linear_layout_item"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:textColor="@color/color_blue_bold"
            android:textStyle="bold"
            android:id="@+id/repo_text_view_title" />

        <TextView
            android:id="@+id/repo_text_view_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:layout_marginBottom="@dimen/default_margin"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:text="@string/fake_description_text"
            android:ellipsize="end"
            android:maxLines="2"
            tools:ignore="InefficientWeight" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/git_icon_forks_black"
                android:tint="@color/colorAccent"
                android:id="@+id/repo_imageview_forks"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/between_items_margin"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorAccent"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                tools:text="100"
                android:text="@string/blank_value"
                android:id="@+id/repo_textview_number_forks" />

            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="@dimen/default_internal_margin"
                android:src="@drawable/git_icon_star_black"
                android:tint="@color/colorAccent"
                android:id="@+id/repo_imageview_stars"
                tools:ignore="ContentDescription" />

            <TextView
                tools:text="100"
                android:layout_gravity="center_vertical"
                android:textColor="@color/colorAccent"
                android:layout_marginStart="@dimen/between_items_margin"
                android:text="@string/blank_value"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/repo_textview_number_stars"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_weight="0.35">

        <com.pkmmte.view.CircularImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/placeholder_user"
            tools:mockup="@drawable/placeholder_user"
            android:id="@+id/repo_textview_owner_photo" />

        <TextView
            android:id="@+id/repo_textview_owner_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/color_blue_light"
            android:textStyle="bold"
            android:text="@string/small_text"
            android:ellipsize="end"
            android:maxLength="22" />
    </LinearLayout>


</LinearLayout>

    <include layout="@layout/view_divider_horizontal"/>

</LinearLayout>