<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/pull_list_fragment"
    tools:context=".pulllisting.PullRequestsActivity"
    >
    <TextView
        android:id="@+id/empty_list_textview"
        android:text="@string/no_pull_requests"
        style="@style/AppTheme"
        android:layout_margin="@dimen/default_material_screen_edge_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/pulls_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        tools:listitem="@layout/pull_viewholder"
        />

</FrameLayout>
